deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sprint-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sprint-app
  template:
    metadata:
      labels:
        app: sprint-app
    spec:
      containers:
        - name: sprint-app
          image: us-central1-docker.pkg.dev/ce-ps3/devops-sprint/sprint:latest
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 80
